--- a/webAssesment/css/stylesWeb.css
+++ b/webAssesment/css/stylesWeb.css
@@ -43,16 +43,13 @@ header {
 }
 
 .navC {
-    color: navy;
+    color: rgba(13, 59, 82, 1);
     height: auto;
-    /*background-color: white;*/
-    background-color: red;
+    background-color: white;
     position: relative;
-/*    border-bottom: 1px solid rgba(94, 165, 223, 1);*/
-    /*z-index: -1;*/
     top: 0;
     left: 0;
-    /*width: 100%;*/
+    border: solid 1px rgba(13, 59, 82, 1);
 }
 
 .navBtn  {
@@ -67,7 +64,7 @@ header {
 }
 
 nav li a, nav li {
-    color: white;    
+    color: rgba(13, 59, 82, 1);    
     opacity: 1;
     width: 100%;
     margin: 0%;
@@ -82,23 +79,28 @@ nav li a, nav li {
 }
 
 nav ul {
-    padding: 2%;
+    padding-right: 3%;
+    padding-bottom: 1%;
 }
 
 .search {
     position: absolute;
-    top: 20px;
-    left: 200px;
+    left: 30%;
     z-index: 20;
-    background-color: green;
+    background-color: white;
     width: 200px;
+    text-align: center;
+    top: 3vh;
 }
 
 .searchText {
-/*    visibility: hidden;*/
+    float: left;
+    visibility: hidden;
 }
 
 .searchBox {
+    right: 100px;
+    margin-top: 15%;
 }
 
 .searchSub {
@@ -109,7 +111,7 @@ nav ul {
     background-color: rgba(13, 59, 82, 0.7);
     padding: 2%;
     display: inline-block;
-    margin-top: 70%;
+    margin-top: 60%;
     z-index: 30;
     float: right;
 }
@@ -159,9 +161,23 @@ h2 {
 
 .welcome {
     background-color: rgba(184, 210, 238, 1);
-    text-align: center;
+    text-align: left;
+    margin-top: 5%;
+    padding: 1% 2%;
+    z-index: -2;
 }
 
+.socialimg {
+    width: 60%;
+    position: relative;
+    display: block;
+    margin: 20px auto 20px;
+    column-count: 2;
+    z-index: -1;
+    
+
+}
+    
 /*---------------------------------------------------------------------
                             SECTION C STYLES
 ---------------------------------------------------------------------*/
@@ -172,6 +188,7 @@ h3 {
 .sitemap {
     color: white;
     background-color: rgba(51, 51, 51, 1);
+    padding: 1%;
 }
 
 .sitemap ul {
